# rusty_list

./: Cargo.toml  LICENSE.md  README.md
src/: core_types.rs  lib.rs
src/list_ops/: find_equal.rs  insert.rs  mod.rs  new.rs  pop.rs  push.rs  remove.rs
